globus-gridmap-eppn-callout (1.13-2+gt6.@distro@) @distro@; urgency=low

  * Update for el.5 openssl101e

 -- Globus Toolkit <support@globus.org>  Thu, 08 Sep 2016 15:36:24 -0400

globus-gridmap-eppn-callout (1.12-1+gt6.@distro@) @distro@; urgency=low

  * Update bug report URL

 -- Globus Toolkit <support@globus.org>  Sat, 20 Aug 2016 09:11:39 -0400

globus-gridmap-eppn-callout (1.11-1+gt6.@distro@) @distro@; urgency=low

  * Missing dependency

 -- Globus Toolkit <support@globus.org>  Tue, 03 May 2016 16:52:27 -0400

globus-gridmap-eppn-callout (1.10-1+gt6.@distro@) @distro@; urgency=low

  * Missing dependency

 -- Globus Toolkit <support@globus.org>  Tue, 03 May 2016 16:23:10 -0400

globus-gridmap-eppn-callout (1.9-1+gt6.@distro@) @distro@; urgency=low

  * GT-373: add support for proxies to eppn callout

 -- Globus Toolkit <support@globus.org>  Mon, 14 Dec 2015 16:24:10 -0600

globus-gridmap-eppn-callout (1.8-1+gt6.@distro@) @distro@; urgency=low

  * remove unused variable

 -- Globus Toolkit <support@globus.org>  Wed, 01 Jul 2015 16:55:30 -0400

globus-gridmap-eppn-callout (1.7-1+gt6.@distro@) @distro@; urgency=low

  * Fix dependency version
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Thu, 25 Sep 2014 08:29:37 -0400

globus-gridmap-eppn-callout (1.6-2+gt6.@distro@) @distro@; urgency=low

  * Don't bother trying to remove pc file

 -- Globus Toolkit <support@globus.org>  Mon, 25 Aug 2014 14:44:23 -0400

globus-gridmap-eppn-callout (1.6-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-gridmap-eppn-callout (1.5-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-gridmap-eppn-callout (1.5-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages
